Изменен объект ответа сервера аналитики