@@ -2,13 +2,14 @@ package tp35.mycashserver.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import tp35.mycashserver.mapper.CategoryMapper;
 import tp35.mycashserver.model.Account;
 import tp35.mycashserver.model.Category;
 import tp35.mycashserver.model.CategoryType;
 import tp35.mycashserver.model.User;
 import tp35.mycashserver.response.AllMonthData;
 import tp35.mycashserver.response.AnalyticsResponse;
-import tp35.mycashserver.response.DayCategoriesSum;
+import tp35.mycashserver.response.CategoriesDaySum;
 import tp35.mycashserver.utils.Pair;
 
 import java.time.LocalDate;
@@ -23,22 +24,26 @@ import java.util.stream.IntStream;
 public class AnalyticsService {
     private final OperationSumGetterService operationSumGetterService;
     private final CategoryService categoryService;
+    private final CategoryMapper categoryMapper;
 
-    public List<DayCategoriesSum> getDayCategoriesSums(LocalDate begin, LocalDate end,
+    public List<CategoriesDaySum> getDayCategoriesSums(LocalDate begin, LocalDate end,
                                                        List<Category> categories, Account account,
                                                        int year, int month) {
-        return IntStream
-                .range(begin.getDayOfMonth(), end.getDayOfMonth() + 1)
-                .mapToObj(day ->
-                        new DayCategoriesSum(
-                                day,
-                                categories.stream().map(category ->
-                                        new Pair<>(
+
+        return categories.stream()
+                .map(category -> new CategoriesDaySum(
+                        categoryMapper.toCategoryDTO(category),
+                        IntStream.range(begin.getDayOfMonth(), end.getDayOfMonth() + 1)
+                                .mapToObj(day -> new Pair<>(
+                                        day,
+                                        operationSumGetterService.getSumOperationsByAccountByCategoryByDate(
+                                                account,
                                                 category,
-                                                operationSumGetterService
-                                                        .getSumOperationsByAccountByCategoryByDate(account, category, year, month, day)
-                                        )).collect(Collectors.toList())
-                        )).toList();
+                                                year,
+                                                month,
+                                                day)))
+                                .toList()))
+                .collect(Collectors.toList());
     }
 
     public AllMonthData getAllMonthData(Account account, int year) {
@@ -48,8 +53,7 @@ public class AnalyticsService {
                 .toList();
 
         List<Double> incomes = yearMonth.stream()
-                .map(localDate
-                        -> operationSumGetterService
+                .map(localDate -> operationSumGetterService
                         .getSumOperationsByAccountByCategoryTypeByDate(
                                 account,
                                 CategoryType.INCOME,
@@ -58,8 +62,7 @@ public class AnalyticsService {
                 .collect(Collectors.toList());
 
         List<Double> expenses = yearMonth.stream()
-                .map(localDate
-                        -> operationSumGetterService
+                .map(localDate -> operationSumGetterService
                         .getSumOperationsByAccountByCategoryTypeByDate(
                                 account,
                                 CategoryType.EXPENSE,
@@ -87,8 +90,8 @@ public class AnalyticsService {
         LocalDate begin = LocalDate.now().withYear(year).withMonth(month).withDayOfMonth(1);
         LocalDate end = LocalDate.now().withYear(year).withMonth(month).withDayOfMonth(begin.lengthOfMonth());
 
-        List<DayCategoriesSum> incomes = getDayCategoriesSums(begin, end, incomesCategories, account, year, month);
-        List<DayCategoriesSum> expenses = getDayCategoriesSums(begin, end, expensesCategories, account, year, month);
+        List<CategoriesDaySum> incomes = getDayCategoriesSums(begin, end, incomesCategories, account, year, month);
+        List<CategoriesDaySum> expenses = getDayCategoriesSums(begin, end, expensesCategories, account, year, month);
 
         AllMonthData allMonthData = getAllMonthData(account, year);
 
